class PersyaratanItem {
  String? title;
  List<String>? persyaratan;

  PersyaratanItem({
    this.title,
    this.persyaratan,
  });
}

var listData = [
  PersyaratanItem(
    title: 'AHLI WARIS',
    persyaratan: [
      'Fotocopy Akta Kematian yang bersangkutan.',
      'Fotocopy Surat Nikah yang meninggal.',
      'Fotocopy Kartu Keluarga (KK) seluruh Ahli Waris.',
      'Fotocopy Kartu Tanda Penduduk (KTP) seluruh Ahli Waris.',
      'Fotocopy Akta Kelahiran seluruh Ahli Waris.',
      'Fotocopy Surat Nikah seluruh Ahli Waris (apabila sudah menikah).',
      'Fotocopy Kartu Tanda Penduduk (KTP) 2 orang saksi.',
      'Materai Rp.10.000.',
    ],
  ),
  PersyaratanItem(
    title: 'PENGADUAN MASYARAKAT',
    persyaratan: [
      'Fotocopy Kartu Tanda Penduduk (KTP) yang bersangkutan calon pasangan, orangtua dan dua orang saksi.',
      'Fotocopy Kartu Keluarga yang warga kita.',
      'Untuk PNS, POLRI dan TNI harus ada surat izin dari atasan tempat kerja.',
      'Formulir Permohonan Nikah "Bisa diambil di Kantor Lurah Maharatu atau bisa diambil juga di RT/RW setempat" dan bisa juga didownload dibawah ini.',

      // 'FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG BERSANGKUTAN CALON PASANGAN, ORANGTUA DAN 2 (DUA) ORANG SAKSI.',
      // 'FOTOCOPY KARTU KELUARGA YANG WARGA KITA.',
      // 'UNTUK PNS, POLRI DAN TNI HARUS ADA SURAT IZIN DARI ATASAN TEMPAT KERJA.',
      // 'FORMULIR PERMOHONAN NIKAH "BISA DIAMBIL DI KANTOR LURAH MAHARATU/ RT/RW SETEMPAT" DAN BISA JUGA DIDOWNLOAD DIBAWAH INI.',
    ],
  ),
  PersyaratanItem(
    title: 'SURAT KETERANGAN TIDAK MAMPU',
    persyaratan: [
      'Fotocopy Kartu Keluarga (KK).',
      'Fotocopy Kartu Tanda Penduduk (KTP).',
      'Surat Pengantar dari RT/RW.',

      // 'FOTOCOPY KARTU KELUARGA (KK).',
      // 'FOTOCOPY KARTU TANDA PENDUDUK (KTP).',
      // 'SURAT PENGANTAR DARI RT/RW.',
    ],
  ),
  PersyaratanItem(
    title: 'K E T E R A N G A N',
    persyaratan: [
      'Untuk Surat Keterangan Gaib: \n1. Fotocopy Kartu Keluarga (KK) yang bersangkutan. \n2. Fotocopy Kartu Tanda Penduduk (KTP) yang bersangkutan. \n3. Surat Pengantar dari RT/RW. \n4. Fotocopy Surat Pernyataan yang bersangkutan ditinggal pasangan berapa lama.',
      'Untuk Surat Keterangan Nama: \n1. Fotocopy Kartu Keluarga (KK) yang bersangkutan. \n2. Fotocopy Kartu Tanda Penduduk (KTP) yang bersangkutan. \n3. Surat Pengantar dari RT/RW. \n4. Fotocopy Surat Pernyataan. \n5. Fotocopy Lampiran apa yang berbeda.',
      'Untuk Surat Keterangan Tanggal Lahir : \n1. Fotocopy Kartu Keluarga (KK) yang bersangkutan. \n2. Fotocopy Kartu Tanda Penduduk (KTP) yang bersangkutan. \n3. Surat Pengantar dari RT/RW.\n4. Fotocopy Surat Pernyataan. \n5. Fotocopy Lampiran apa yang berbeda.',

      // 'UNTUK SURAT KETERANGAN GAIB: \n1. FOTOCOPY KARTU KELUARGA (KK) YANG BERSANGKUTAN. \n2. FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG BERSANGKUTAN. \n3. SURAT PENGANTAR DARI RT/RW. \n4. FOTOCOPY SURAT PERNYATAAN YANG BERSANGKUTAN DITINGGAL PASANGAN BERAPA LAMA.',
      // 'UNTUK SURAT KETERANGAN NAMA: \n1. FOTOCOPY KARTU KELUARGA (KK) YANG BERSANGKUTAN. \n2. FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG BERSANGKUTAN. \n3. SURAT PENGANTAR DARI RT/RW. \n4. FOTOCOPY SURAT PERNYATAAN. \n5. FOTOCOPY LAMPIRAN APA YANG BERBEDA.',
      // 'UNTUK SURAT KETERANGAN TANGGAL LAHIR : \n1. FOTOCOPY KARTU KELUARGA (KK) YANG BERSANGKUTAN. \n2. FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG BERSANGKUTAN. \n3. SURAT PENGANTAR DARI RT/RW. \n4. FOTOCOPY SURAT PERNYATAAN. \n5. FOTOCOPY LAMPIRAN APA YANG BERBEDA.',
    ],
  ),
  PersyaratanItem(
    title: 'SURAT KETERANGAN PINDAH WILAYAH.',
    persyaratan: [
      'Fotocopy Kartu Keluarga (KK) yang bersangkutan.',
      'Fotocopy Kartu Tanda Penduduk (KTP) yang bersangkutan yang sesuai di Surat Keterangan Ganti Rugi (SKGR).',
      'Surat Pengantar dari RT/RW.',
      'Fotocopy Surat Keterangan Ganti Rugi (SKGR).',

      // 'FOTOCOPY KARTU KELUARGA (KK) YANG BERSANGKUTAN.',
      // 'FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG BERSANGKUTAN YANG SESUAI DI SURAT KETERANGAN GANTI RUGI (SKGR).',
      // 'SURAT PENGANTAR DARI RT/RW.',
      // 'FOTOCOPY SURAT KETERANGAN GANTI RUGI (SKGR).',
    ],
  ),
  PersyaratanItem(
    title: 'P E N G H A S I L A N',
    persyaratan: [
      'Fotocopy Kartu Keluarga (KK) yang bersangkutan.',
      'Fotocopy Kartu Tanda Penduduk (KTP) yang bersangkutan.',
      'Surat Pengantar dari RT/RW.',
      'Surat Pernyataan bermaterai Rp.10.000 yang menyatakan jumlah penghasilan yang bersangkutan.',

      // 'FOTOCOPY KARTU KELUARGA (KK) YANG BERSANGKUTAN.',
      // 'FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG BERSANGKUTAN.',
      // 'SURAT PENGANTAR DARI RT/RW.',
      // 'SURAT PERNYATAAN BERMATERAI Rp 10.000 YANG MENYATAKAN JUMLAH PENGHASILAN YANG BERSANGKUTAN.',
    ],
  ),
  PersyaratanItem(
    title: 'K E M A T I A N',
    persyaratan: [
      'Fotocopy Kartu Keluarga (KK) yang meninggal.',
      'Fotocopy Kartu Tanda Penduduk (KTP) yang mengadu dan yang meninggal kalau masih ada.',
      'Surat Pengantar dari RT/RW yang mencantumkan waktu kematian dan tempat kematian.',

      // 'FOTOCOPY KARTU KELUARGA (KK) YANG MENINGGAL.',
      // 'FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG MENGADU DAN YANG MENINGGAL KALAU MASIH ADA.',
      // 'SURAT PENGANTAR DARI RT/RW YANG MENCANTUMKAN WAKTU KEMATIAN DAN TEMPAT KEMATIAN.',
    ],
  ),
  PersyaratanItem(
    title: 'SURAT KETERANGAN BELUM MEMILIKI RUMAH.',
    persyaratan: [
      'Fotocopy Kartu Keluarga (KK) yang bersangkutan.',
      'Fotocopy Kartu Tanda Penduduk (KTP) yang bersangkutan.',
      'Surat Pengantar dari RT/RW atau pernyataan yang bersangkutan bermaterai Rp.10.000.',

      // 'FOTOCOPY KARTU KELUARGA (KK) YANG BERSANGKUTAN.',
      // 'FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG BERSANGKUTAN.',
      // 'SURAT PENGANTAR DARI RT/RW ATAU PERNYATAAN YANG BERSANGKUTAN BERMATERAI Rp 10.000.',
    ],
  ),
  PersyaratanItem(
    title: 'REKOMENDASI USAHA',
    persyaratan: [
      'Fotocopy Kartu Keluarga (KK) yang bersangkutan.',
      'Fotocopy Kartu Tanda Penduduk (KTP) yang bersangkutan.',
      'Surat Pengantar dari RT/RW.',
      'Fotocopy Akta Notaris Pendirian Usaha.',
      'Fotocopy Pajak Bumi dan Bangunan (PBB).',

      // 'FOTOCOPY KARTU KELUARGA (KK) YANG BERSANGKUTAN.',
      // 'FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG BERSANGKUTAN.',
      // 'SURAT PENGANTAR DARI RT/RW.',
      // 'FOTOCOPY AKTA NOTARIS PENDIRIAN USAHA.',
      // 'FOTOCOPY PAJAK BUMI DAN BANGUNAN (PBB).',
    ],
  ),
  PersyaratanItem(
    title: 'D O M I S I L I',
    persyaratan: [
      'Fotocopy Kartu Keluarga (KK) yang bersangkutan.',
      'Fotocopy Kartu Tanda Penduduk (KTP) yang bersangkutan.',
      'Surat Pengantar dari RT/RW.',

      // 'FOTOCOPY KARTU KELUARGA (KK) YANG BERSANGKUTAN.',
      // 'FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG BERSANGKUTAN.',
      // 'SURAT PENGANTAR DARI RT/RW.',
    ],
  ),
  PersyaratanItem(
    title: 'DOMISILI USAHA',
    persyaratan: [
      'Fotocopy Kartu Keluarga (KK) yang bersangkutan.',
      'Fotocopy Kartu Tanda Penduduk (KTP) yang bersangkutan.',
      'Fotocopy Pajak Bumi dan Bangunan (PBB).',
      'Surat Pengantar dari RT/RW.',

      // 'FOTOCOPY KARTU KELUARGA (KK) YANG BERSANGKUTAN.',
      // 'FOTOCOPY KARTU TANDA PENDUDUK (KTP) YANG BERSANGKUTAN.',
      // 'FOTOCOPY PAJAK BUMI DAN BANGUNAN (PBB).',
      // 'SURAT PENGANTAR DARI RT/RW.\n\n (Perda Kota Pekanbaru Nomor. Tahun.)',
    ],
  ),
];
